complete analog clock

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Analog Clock</title>
     <link rel="shortcut icon" href="assets/analog_clock_logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js"></script>
 </head>
 <body>
     <div class="container">
+        <!-- <img src="assets/p.png" alt="loading"> -->
         <div class="clock">
             
             <span style="--i:1;"><b>1</b></span>
@@ -25,10 +25,11 @@
             <span style="--i:11;"><b>11</b></span>
             <span style="--i:12;"><b>12</b></span>
             
-            <div style="--clr: #24119c;" id="hours" class="hand"><i></i></div>
-            <div style="--clr: #29d48d;" id="mins" class="hand"><i></i></div>
-            <div style="--clr: #e4225f;" id="secs" class="hand"><i></i></div>
+            <div style="--clr: #5d070a; --h: 65px; --w: 5px;" id="hours" class="hand"><i></i></div>
+            <div style="--clr: #12066a; --h: 80px; --w: 3px;" id="mins" class="hand"><i></i></div>
+            <div style="--clr: #3bb8db; --h: 100px; --w: 2px;" id="secs" class="hand"><i></i></div>
         </div>
     </div>
 </body>
+<script src="js/script.js"></script>
 </html>
