--- a/index.html
+++ b/index.html
@@ -1,35 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Analog Clock</title>
-    <link rel="shortcut icon" href="assets/analog_clock_logo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link
+      rel="shortcut icon"
+      href="assets/analog_clock_logo.jpg"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <div class="container">
-        <!-- <img src="assets/p.png" alt="loading"> -->
-        <div class="clock">
-            
-            <span style="--i:1;"><b>1</b></span>
-            <span style="--i:2;"><b>3</b></span>
-            <span style="--i:3;"><b>2</b></span>
-            <span style="--i:4;"><b>4</b></span>
-            <span style="--i:5;"><b>5</b></span>
-            <span style="--i:6;"><b>6</b></span>
-            <span style="--i:7;"><b>7</b></span>
-            <span style="--i:8;"><b>8</b></span>
-            <span style="--i:9;"><b>9</b></span>
-            <span style="--i:10;"><b>10</b></span>
-            <span style="--i:11;"><b>11</b></span>
-            <span style="--i:12;"><b>12</b></span>
-            
-            <div style="--clr: #5d070a; --h: 65px; --w: 5px;" id="hours" class="hand"><i></i></div>
-            <div style="--clr: #12066a; --h: 80px; --w: 3px;" id="mins" class="hand"><i></i></div>
-            <div style="--clr: #3bb8db; --h: 100px; --w: 2px;" id="secs" class="hand"><i></i></div>
+      <!-- <img src="assets/p.png" alt="loading"> -->
+      <div class="clock">
+        <span style="--i: 1"><b>1</b></span>
+        <span style="--i: 2"><b>3</b></span>
+        <span style="--i: 3"><b>2</b></span>
+        <span style="--i: 4"><b>4</b></span>
+        <span style="--i: 5"><b>5</b></span>
+        <span style="--i: 6"><b>6</b></span>
+        <span style="--i: 7"><b>7</b></span>
+        <span style="--i: 8"><b>8</b></span>
+        <span style="--i: 9"><b>9</b></span>
+        <span style="--i: 10"><b>10</b></span>
+        <span style="--i: 11"><b>11</b></span>
+        <span style="--i: 12"><b>12</b></span>
+
+        <div
+          style="--clr: #5d070a; --h: 65px; --w: 5px"
+          id="hours"
+          class="hand"
+        >
+          <i></i>
         </div>
+        <div style="--clr: #12066a; --h: 80px; --w: 3px" id="mins" class="hand">
+          <i></i>
+        </div>
+        <div
+          style="--clr: #3bb8db; --h: 100px; --w: 2px"
+          id="secs"
+          class="hand"
+        >
+          <i></i>
+        </div>
+      </div>
     </div>
-</body>
-<script src="js/script.js"></script>
+  </body>
+  <script src="js/script.js"></script>
 </html>
